[gd_scene load_steps=7 format=3 uid="uid://dolritqgtceml"]

[ext_resource type="Script" uid="uid://crp24nu04jd44" path="res://scripts/start_menu/start_menu.gd" id="1_00vf8"]
[ext_resource type="PackedScene" uid="uid://dmgyqc86pp3vs" path="res://scenes/start_menu/button_manager.tscn" id="2_yug03"]
[ext_resource type="Theme" uid="uid://2ek7eagjo7f0" path="res://resources/themes/general_theme.tres" id="3_wt4dt"]
[ext_resource type="Texture2D" uid="uid://bdpgwda84gcms" path="res://assets/start_menu/icons/fullscreen_icon.png" id="4_midwr"]
[ext_resource type="PackedScene" uid="uid://bp7pspq4knti5" path="res://scenes/start_menu/options_menu.tscn" id="5_rdda7"]
[ext_resource type="PackedScene" uid="uid://2i316e7renfb" path="res://scenes/start_menu/how_to_play.tscn" id="6_cantw"]

[node name="start_menu" type="Control" node_paths=PackedStringArray("how_to_play", "options_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_00vf8")
how_to_play = NodePath("how_to_play")
options_menu = NodePath("options_menu")

[node name="Button_Manager" parent="." instance=ExtResource("2_yug03")]

[node name="button_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -117.5
offset_right = 80.0
offset_bottom = 117.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="start_button" type="Button" parent="button_container"]
texture_filter = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wt4dt")
text = "START"

[node name="how_to_play_button" type="Button" parent="button_container"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wt4dt")
text = " HOW TO PLAY"

[node name="options_button" type="Button" parent="button_container"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wt4dt")
text = " SETTINGS"

[node name="quit_button" type="Button" parent="button_container"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wt4dt")
text = " QUIT"

[node name="fullscreen_button" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = 1166.0
offset_top = 628.0
offset_right = 1206.0
offset_bottom = 668.0
focus_neighbor_bottom = NodePath("../button_container/start_button")
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("3_wt4dt")
theme_override_colors/icon_normal_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_focus_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_pressed_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_hover_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_font_sizes/font_size = 27
icon = ExtResource("4_midwr")
icon_alignment = 1
expand_icon = true

[node name="options_menu" parent="." instance=ExtResource("5_rdda7")]
visible = false
layout_mode = 1

[node name="how_to_play" parent="." instance=ExtResource("6_cantw")]
visible = false
layout_mode = 1

[connection signal="pressed" from="button_container/start_button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="button_container/how_to_play_button" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="button_container/options_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="button_container/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="fullscreen_button" to="." method="_on_fullscreen_button_pressed"]
