[gd_scene load_steps=9 format=3 uid="uid://dolritqgtceml"]

[ext_resource type="Script" uid="uid://crp24nu04jd44" path="res://scripts/start_menu/start_menu.gd" id="1_4v5wy"]
[ext_resource type="Theme" uid="uid://2ek7eagjo7f0" path="res://resources/themes/general_theme.tres" id="2_tj3dw"]
[ext_resource type="Texture2D" uid="uid://bdpgwda84gcms" path="res://assets/start_menu/icons/fullscreen_icon.png" id="3_rudpn"]
[ext_resource type="PackedScene" uid="uid://bp7pspq4knti5" path="res://scenes/start_menu/options_menu.tscn" id="4_eum3g"]
[ext_resource type="PackedScene" uid="uid://2i316e7renfb" path="res://scenes/start_menu/how_to_play_menu.tscn" id="5_gu1vn"]
[ext_resource type="PackedScene" uid="uid://mtilpmnd7m7y" path="res://scenes/main_game/patient.tscn" id="6_rudpn"]
[ext_resource type="Texture2D" uid="uid://djliflvadj1j5" path="res://assets/ui/logo.png" id="7_rudpn"]
[ext_resource type="PackedScene" uid="uid://l2cef4jx50s4" path="res://scenes/main_game/Player.tscn" id="8_eum3g"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_4v5wy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.29803923, 0.49803922, 0.47058824, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -29.0
offset_right = 80.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="ButtonContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_tj3dw")
text = "START"

[node name="HowToPlayButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_tj3dw")
text = " HOW TO PLAY"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_tj3dw")
text = " SETTINGS"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_tj3dw")
text = " QUIT"

[node name="FullScreenButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = 1198.0001
offset_top = 640.0
offset_right = 1244.0001
offset_bottom = 692.0
scale = Vector2(0.7, 0.7)
focus_neighbor_bottom = NodePath("../ButtonContainer/StartButton")
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("2_tj3dw")
theme_override_colors/icon_normal_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_focus_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_pressed_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_hover_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.13725491, 0.13333334, 0.15686275, 1)
theme_override_font_sizes/font_size = 27
icon = ExtResource("3_rudpn")
icon_alignment = 1

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(647, 196)
texture = ExtResource("7_rudpn")

[node name="OptionsMenu" parent="." instance=ExtResource("4_eum3g")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_top = -23.0
offset_bottom = -23.0

[node name="HowToPlayMenu" parent="." instance=ExtResource("5_gu1vn")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Patient" parent="." instance=ExtResource("6_rudpn")]
position = Vector2(278, 343)
rotation = 1.5707964
script = null

[node name="Player" parent="." instance=ExtResource("8_eum3g")]

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="FullScreenButton" to="." method="_on_fullscreen_button_pressed"]
